# airflow

./: .azure-pipelines.yml  .gitignore  README.md  pyproject.toml
airflow_tutorial/: README.md
airflow_tutorial/fundamentals/: README.md  tutorial_taskflow_api.py
airflow_tutorial/fundamentals/.astro/: config.yaml
airflow_tutorial/fundamentals/dags/: tutorial_taskflow_api.py
dags/: airflow_tutorial_taskflow_api.py  fundamental_concepts.py
src/data_engineering/airflow/: README.md
src/data_engineering/airflow/fundamentals/: README.md
src/general_python/decorators/: custom_decorators.py
tests/dags/: test_dag_example.py  test_example_astronauts.py
